Bug 1086545 - Bind speech task streams to a parent stream held by voice registry. r=padenot