dom/media/webspeech/synth/nsSpeechTask.cpp
@@ -118,6 +118,7 @@ nsSpeechTask::nsSpeechTask(float aVolume, const nsAString& aText)
 
 nsSpeechTask::~nsSpeechTask()
 {
+  LOG(PR_LOG_DEBUG, ("~nsSpeechTask"));
   if (mStream) {
     if (!mStream->IsDestroyed()) {
       mStream->Destroy();
@@ -125,6 +126,18 @@ nsSpeechTask::~nsSpeechTask()
 
     mStream = nullptr;
   }
+
+  if (mPort) {
+    mPort->Destroy();
+    mPort = nullptr;
+  }
+}
+
+void
+nsSpeechTask::BindStream(ProcessedMediaStream* aStream)
+{
+  mStream = MediaStreamGraph::GetInstance()->CreateSourceStream(nullptr);
+  mPort = aStream->AllocateInputPort(mStream, 0);
 }
 
 NS_IMETHODIMP
@@ -137,16 +150,16 @@ nsSpeechTask::Setup(nsISpeechTaskCallback* aCallback,
 
   mCallback = aCallback;
 
-  if (argc < 2) {
+  if (mIndirectAudio) {
+    if (argc > 0) {
+      NS_WARNING("Audio info arguments in Setup() are ignored for indirect audio services.");
+    }
     return NS_OK;
   }
 
-  if (mIndirectAudio) {
-    NS_WARNING("Audio info arguments in Setup() are ignored for indirect audio services.");
-  }
+  // mStream is set up in BindStream() that should be called before this.
+  MOZ_ASSERT(mStream);
 
-  // XXX: Is there setup overhead here that hurtls latency?
-  mStream = MediaStreamGraph::GetInstance()->CreateSourceStream(nullptr);
   mStream->AddListener(new SynthStreamListener(this));
 
   // XXX: Support more than one channel
